--- a/css/main.css
+++ b/css/main.css
@@ -148,7 +148,11 @@ section {
     margin-bottom: 10px;
 }
 .project {
-    background-color: #000016;
+    background-image: url(../img/10.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
 }
 .project .content {
     margin-top: 30px;
